Added Flask Logo to Stream-three.html

--- a/stream-three.html
+++ b/stream-three.html
@@ -46,6 +46,12 @@
 				</a>
 			</div>
 			<div class="card">
+				<a href="https://en.wikipedia.org/wiki/Flask_(web_framework)">
+					<img src="http://flask.pocoo.org/docs/1.0/_static/flask.png"/>
+					<h2>Flask</h2>
+				</a>
+			</div>
+			<div class="card">
 				<a href="https://en.wikipedia.org/wiki/MySQL">
 					<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/1200px-MySQL.svg.png"/>
 					<h2>My SQL</h2>
